# Django-Postgres

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
blog/: admin.py  models.py  tests.py  urls.py
blog/api/: serializers.py  viewsets.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
